// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserList should match default snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="more-modal__placeholder-row"
          data-testid="noUsersFound"
        >
          <p>
            No users found
          </p>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="more-modal__placeholder-row"
        data-testid="noUsersFound"
      >
        <p>
          No users found
        </p>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/UserList should match default snapshot when there are users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="more-modal__row"
        >
          <span
            class="status-wrapper  "
          >
            <button
              class="RoundButton-dvlhqG gfRzmz style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="some-user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/id1/image"
                  tabindex="-1"
                />
              </span>
            </button>
          </span>
          <div
            class="more-modal__details"
            data-testid="userListItemDetails"
          >
            <div
              class="d-flex whitespace--nowrap"
            >
              <div
                class="more-modal__name"
              >
                <button
                  aria-label="someone"
                  class="user-popover style--none"
                >
                  Someone
                </button>
                 
                 
              </div>
            </div>
            <div
              class="more-modal__description"
            />
          </div>
          <div
            class="more-modal__actions"
            data-testid="userListItemActions"
          />
        </div>
        <div
          class="more-modal__row"
        >
          <span
            class="status-wrapper  "
          >
            <button
              class="RoundButton-dvlhqG gfRzmz style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="some-user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/id2/image"
                  tabindex="-1"
                />
              </span>
            </button>
          </span>
          <div
            class="more-modal__details"
            data-testid="userListItemDetails"
          >
            <div
              class="d-flex whitespace--nowrap"
            >
              <div
                class="more-modal__name"
                id="userListRowName1"
              >
                <button
                  aria-label="someone"
                  class="user-popover style--none"
                >
                  Someone
                </button>
                 
                 
              </div>
            </div>
            <div
              class="more-modal__description"
              id="userListRowEmail1"
            />
          </div>
          <div
            class="more-modal__actions"
            data-testid="userListItemActions"
          />
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="more-modal__row"
      >
        <span
          class="status-wrapper  "
        >
          <button
            class="RoundButton-dvlhqG gfRzmz style--none"
          >
            <span
              class="profile-icon "
            >
              <img
                alt="some-user profile image"
                class="Avatar Avatar-md"
                loading="lazy"
                src="/api/v4/users/id1/image"
                tabindex="-1"
              />
            </span>
          </button>
        </span>
        <div
          class="more-modal__details"
          data-testid="userListItemDetails"
        >
          <div
            class="d-flex whitespace--nowrap"
          >
            <div
              class="more-modal__name"
            >
              <button
                aria-label="someone"
                class="user-popover style--none"
              >
                Someone
              </button>
               
               
            </div>
          </div>
          <div
            class="more-modal__description"
          />
        </div>
        <div
          class="more-modal__actions"
          data-testid="userListItemActions"
        />
      </div>
      <div
        class="more-modal__row"
      >
        <span
          class="status-wrapper  "
        >
          <button
            class="RoundButton-dvlhqG gfRzmz style--none"
          >
            <span
              class="profile-icon "
            >
              <img
                alt="some-user profile image"
                class="Avatar Avatar-md"
                loading="lazy"
                src="/api/v4/users/id2/image"
                tabindex="-1"
              />
            </span>
          </button>
        </span>
        <div
          class="more-modal__details"
          data-testid="userListItemDetails"
        >
          <div
            class="d-flex whitespace--nowrap"
          >
            <div
              class="more-modal__name"
              id="userListRowName1"
            >
              <button
                aria-label="someone"
                class="user-popover style--none"
              >
                Someone
              </button>
               
               
            </div>
          </div>
          <div
            class="more-modal__description"
            id="userListRowEmail1"
          />
        </div>
        <div
          class="more-modal__actions"
          data-testid="userListItemActions"
        />
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
